# ue-splat-capture

./: .gitignore  CLAUDE.md  Makefile  README.md  conftest.py  pyproject.toml
results/: baseline.json
scripts/: ab_tiled.py  analyze_extent.py  analyze_holes.py  any_pipeline.py  average_samples.py  bench_res_fwd.py  bp_pathfly_facing.dsl  capture.sh  capture_editor_run.sh  capture_headless_run.sh  capture_path.py  capture_vantage.py  concat_layers.py  depth_exr_to_inria.py  despike_ply.py  hdr_to_training_png.py  hole_scan.sh  make_floor_texture.py  make_sog_viewer.sh  mcp_call.py  mcp_capture.py  mcp_pie_fit.py  mcp_pie_sample.py  mcp_pie_verify.py  mcp_probe_array.tool.py  mcp_rail_circle.tool.py  mcp_rebake_cam.tool.py  mcp_run_tool.py  mcp_write_graph.py  merge_datasets.py  normalize_ds.py  orbit_poses.py  path_rail_bp.py  path_rail_loop.py  path_rail_pilot.py  path_rail_preview.py  path_rail_read.py  path_rail_seed.py  ply_for_phone.py  pod_gate_depth.py  (+26 more)
selftest/: __init__.py  make_fixtures.py  raytracer.py  scene.py
splatkit/: __init__.py  convert.py  coverage.py  data.py  evaluate.py  geom.py  gsmodel.py  ingest.py  initpc.py  make_baseline.py  metrics.py  reproject.py  results.py  schema.py  tier_t0.py  tier_t2.py  tier_t3.py  train.py  verify.py
tests/: test_convert.py  test_dataset.py  test_gsmodel.py  test_ingest.py  test_reproject.py  test_rig.py
ue_capture/: __init__.py  capture_any.py  capture_canyon_live.py  capture_editor.py  capture_editor_warm.py  capture_headless.py  capture_hero_orbit.py  detect.py  export.py  render.py  rig.py  (+2 more)
(+2 files in other folders)
